# primmobilier

./: .gitignore  CHANGELOG.md  CONTEXT.md  HAND-OFF.md  NOTEBOOK_ESTIMATION_DONNEES.md  lancer_pipeline.py  pyproject.toml  spike_parcelle_adresse.py
docs/: EXPLORATION_DPE.md  JOURNAL_SITE_2028.md  PIPELINE.md  PLAN_SITE_2028.md  REFERENCES_VISUEL.md  SOURCES_DONNEES.md
docs/adr/: 0001-valider-joignabilite-avant-de-figer-le-socle.md  0002-parquet-duckdb-comme-moteur-de-service.md  0003-rnb-pivot-batiment.md  0004-recuperation-non-matchs-dvf-rnb.md  0005-organisation-des-donnees-table-comparables.md  0006-bdnb-parcelle-pour-resolution-batiment.md  0007-fastapi-sqlite-pour-le-backend-produit.md  0008-front-vanilla-multi-pages-zero-build.md
notebooks/: spike_jointures_33.ipynb
pipeline/: commun.py  construire_comparables.py  geocodage_residuel.py  qualite_jointure.py  recuperation_non_match.py  reduire_referentiels.py
telechargement/: _telechargement.py  preparer_adresses_parcelle.py  preparer_cadastre.py  preparer_codes_postaux.py  preparer_communes.py  preparer_copro.py  preparer_donnees.py  preparer_dpe.py  preparer_loyers.py  preparer_passage_communes.py  recuperer_dpe_post2021.py
web_poc/: app.py  server.py
web_poc/maquettes/: accueil.html  atlas.html  atlas.js  base.css  export.html  neon.css  observatoire.html  shell.css  shell.js  tokens.css
web_poc/maquettes/atlas/: address.js  api.js  comparables.js  controls.js  detail.js  estimate.js  explore.js  format.js  map.js  scope.js  (+2 more)
web_poc/static/: app.css  app.js  index.html  theme.js  timeline.js
